--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <div class="container">
   <div class="row justify-content-between">
-    <div class="card col m-auto text-white bg-success" style="width: 18rem;">
+    <div class="card  text-green bg-warning" style="width: 18rem;">
       <div class="card-header">
         Header
       </div>
@@ -24,7 +24,7 @@
         <a href="#" class="btn btn-primary">Кнопка</a>
       </div>
     </div>
-    <div class="card col m-auto text-white bg-success" style="width : 18rem;">
+    <div class="card  text-white bg-success" style="width : 18rem;">
       <div class="card-header">
         Header
       </div>
@@ -35,7 +35,7 @@
         <a href="#" class="btn btn-primary">Кнопка</a>
       </div>
     </div>
-    <div class="card col m-auto text-white bg-success" style="width: 18rem;">
+    <div class="card  text-white bg-success" style="width: 18rem;">
       <div class="card-header">
         Header
       </div>
@@ -46,7 +46,9 @@
         <a href="#" class="btn btn-primary">Кнопка</a>
       </div>
     </div>
-    <div class="card col m-auto text-white bg-success" style="width: 18rem;">
+  </div>
+  <div class="row justify-content-between">
+    <div class="card  text-white bg-success" style="width: 18rem;">
       <div class="card-header">
         Header
       </div>
@@ -57,7 +59,7 @@
         <a href="#" class="btn btn-primary">Кнопка</a>
       </div>
     </div>
-    <div class="card col m-auto text-white bg-success" style="width: 18rem;">
+    <div class="card  text-white bg-success" style="width: 18rem;">
       <div class="card-header">
         Header
       </div>
@@ -68,7 +70,7 @@
         <a href="#" class="btn btn-primary">Кнопка</a>
       </div>
     </div>
-    <div class="card col m-auto text-white bg-success" style="width: 18rem;">
+    <div class="card  text-white bg-success" style="width: 18rem;">
       <div class="card-header">
         Header
       </div>
