--- a/index.html
+++ b/index.html
@@ -15,48 +15,110 @@
   <div class="row justify-content-between">
     <div class="card  text-green bg-warning" style="width: 18rem;">
       <div class="card-header">
-        Header
+        Торт Гельвеция
       </div>
       <img class="card-img-top" src="Recepies/rec1/rec1.jpg" alt="Card img cap">
       <div class="card-body">
-        <h4 class="card-title">Моя карточка</h4>
-        <p class="card-text">Описание картинки</p>
-        <a href="#" class="btn btn-primary">Кнопка</a>
+        <p class="card-text">Очень вкусно, оближешь пальчики</p>
+        <button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Торт Гельвеция
+        белки — 8 шт.
+        сахар
+         — 360 г
+        мука миндальная — 300 г
+        желтки — 8 шт.
+        вино белое
+         — 100 г
+        масло сливочное
+         — 200 г
+        сахарная пудра — 200 г
+        какао
+         — 30 г
+        миндаль
+         — 50 г">Ингредиеты</button>
       </div>
     </div>
-    <div class="card  text-white bg-success" style="width : 18rem;">
+    <div class="card  text-ид  bg-success" style="width : 18rem;">
       <div class="card-header">
-        Header
+        Торт Прага
       </div>
       <img class="card-img-top" src="Recepies/rec2/rec2.jpg" alt="Card img cap">
       <div class="card-body">
-        <h4 class="card-title">Моя карточка</h4>
-        <p class="card-text">Описание картинки</p>
-        <a href="#" class="btn btn-primary">Кнопка</a>
+        <p class="card-text">Сочный</p>
+        <button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Торт Прага
+          Ингредиенты
+          мука
+           — 115 г
+          какао
+          яйцо — 6 шт.
+          сахар
+           — 250 г
+          масло сливочное
+           — 290 г
+          соль
+           — 1 щепотка
+          ванильный порошок
+          молоко сгущенное
+           — 150 г
+          желтки — 2 шт.
+          вода
+           — 140 мл
+          коньяк
+           — 80 мл
+          сливки — 150 г
+          шоколад горький — 120 г
+          масло виноградной косточки — 1 ч. л.
+          джем
+           — 100 г">Ингредиеты</button>
       </div>
     </div>
-    <div class="card  text-white bg-success" style="width: 18rem;">
+    <div class="card  text-white bg-dark" style="width: 18rem;">
       <div class="card-header">
-        Header
+        Пончики дрожжевые
       </div>
       <img class="card-img-top" src="Recepies/rec3/rec3.jpg" alt="Card img cap">
       <div class="card-body">
-        <h4 class="card-title">Моя карточка</h4>
-        <p class="card-text">Описание картинки</p>
-        <a href="#" class="btn btn-primary">Кнопка</a>
+        <p class="card-text">Пончики, посыпанные пудрой </p>
+        <button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="мука пшеничная
+          — 300 г
+         яйцо — 2 шт.
+         масло сливочное
+          — 100 г
+         молоко
+          — 120 мл
+         сахар
+          — 35 г
+         дрожжи
+          — 12 г
+         сахарная пудра
+         масло растительное">Ингредиеты</button>
       </div>
     </div>
   </div>
   <div class="row justify-content-between">
-    <div class="card  text-white bg-success" style="width: 18rem;">
+    <div class="card  text-black bg-" style="width: 18rem;">
       <div class="card-header">
-        Header
+        Самса
       </div>
       <img class="card-img-top" src="Recepies/rec4/rec4.jpg" alt="Card img cap">
       <div class="card-body">
-        <h4 class="card-title">Моя карточка</h4>
-        <p class="card-text">Описание картинки</p>
-        <a href="#" class="btn btn-primary">Кнопка</a>
+        <p class="card-text">Мясная</p>
+        <button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Ингредиенты
+          мука
+           — 500 г
+          соль
+          вода
+           — 250 мл
+          яйцо — 1 шт.
+          тыква
+           — 200 г
+          лук репчатый
+           — 2 шт.
+          сало курдючное — 70 г
+          черный перец
+          зира
+           — 1 ч. л.
+          масло растительное — 40 мл
+          желтки — 1 шт.">Ингредиеты</button>
       </div>
     </div>
     <div class="card  text-white bg-success" style="width: 18rem;">
@@ -67,7 +129,25 @@
       <div class="card-body">
         <h4 class="card-title">Моя карточка</h4>
         <p class="card-text">Описание картинки</p>
-        <a href="#" class="btn btn-primary">Кнопка</a>
+        <button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Ингредиенты
+          картофель
+           — 4 шт.
+          говядина
+           — 700 г
+          лук репчатый
+           — 3 шт.
+          мука пшеничная
+           — 700 г
+          масло сливочное
+           — 150 г
+          масло растительное — 60 мл
+          яйцо — 2 шт.
+          майонез
+           — 20 г
+          черный перец
+          вода
+           — 100 мл
+          соль">Ингредиеты</button>
       </div>
     </div>
     <div class="card  text-white bg-success" style="width: 18rem;">
@@ -78,7 +158,24 @@
       <div class="card-body">
         <h4 class="card-title">Моя карточка</h4>
         <p class="card-text">Описание картинки</p>
-        <a href="#" class="btn btn-primary">Кнопка</a>
+        <button type="button" class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="Ингредиенты
+          масло сливочное
+           — 180 г
+          мука
+           — 450 г
+          соль
+           — 5 г
+          разрыхлитель — 5 г
+          пиво — 250 мл
+          желтки — 6 шт.
+          молоко
+           — 600 мл
+          сахар
+           — 100 г
+          крахмал кукурузный — 40 г
+          сыр рикотта — 250 г
+          голубика
+          малина">Ингредиеты</button>
       </div>
     </div>
   </div>
@@ -86,7 +183,15 @@
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script type="text/javascript"></script>
 <script type="text/javascript">
+
+  $(function () {
+
+    $('[data-toggle="tooltip"]').tooltip()
+
+  })
+
 
 </script>
 
